<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmail.vtc.vlado.androidappdevelopment.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/androidappdevelopment"
            android:contentDescription="@string/image_of_business" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/android_app_development"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/e_mail_vlado_vtc_gmail_com"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/www_androidappdevelopment_com"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/work_hours_monday_friday_8h_17h"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

</ScrollView>
